--- a/2020-2021-sem1.md
+++ b/2020-2021-sem1.md
@@ -2,5 +2,6 @@
 
 |     Date     |     Concepts covered    |
 |     ---      |           ---           |
-|      04     |          Into           |
-|      10      |           Kot           |
+|      Dec 15 -16 2020    |          Intro to Android         |
+|         |                    |
+|      Jan 00 -00 2021    |               |
