--- a/2020-2021-sem1.md
+++ b/2020-2021-sem1.md
@@ -1,7 +1,7 @@
 ### Events are held twice per week (on `Tuesday` and `Wednesday`).
 
-|     Date     |     Concepts covered    |
-|     ---      |           ---           |
-|      Dec 15 -16 2020    |          Intro to Android         |
-|         |                    |
-|      Jan 00 -00 2021    |               |
+|     Date     |     Concepts covered    |    Attendees       |
+|     ---      |           ---           |       ---          |
+|  Dec 15 -16 2020 | Intro to Android    |       30+          |
+|                  |                     |                    |
+| Jan 00 -00 2021  | IDE installation    |        30+         |
