--- a/2020-2021-sem1.md
+++ b/2020-2021-sem1.md
@@ -1,12 +1,12 @@
 ### Events are held twice per week (on `Tuesday` and `Wednesday`).
 
-|     Date     |     Concepts covered    |    Attendees       |     Lead      |
-|     ---      |           ---           |       ---          |     ---       |
-|              |                         |                    |               |
-|  `Dec 2020`  |                         |                    |               |
-|    08-09     |IDE and Git installation|       30+          |  Paul & EricG |
-|    15-16     | Intro to Android Studio |       30+          |  Paul & EricG |
-|              |                         |                    |               |
-| `Jan 2021`   |                         |                    |               |
-|     12-13    |   Android basics        |        30+         |               |
-|              |   -                     |                    |               |     
+|     Date     |     Concepts covered      |    Attendees       |     Lead      |
+|     ---      |           ---             |       ---          |     ---       |
+|              |                           |                    |               |
+|  `Dec 2020`  |                           |                    |               |
+|    08-09     |IDE and Git installation   |       35+          |  Paul & EricG |
+|    15-16     | Intro to Android Studio   |       30+          |  Paul & EricG |
+|              |                           |                    |               |
+| `Jan 2021`   |                           |                    |               |
+|     12-13    |Android basics with Kotlin |        30+         |     EricG     |
+|     19       |   Using Git & Githun      |        15+         |     EricG     |     
