--- a/2020-2021-sem1.md
+++ b/2020-2021-sem1.md
@@ -9,4 +9,4 @@
 |              |                           |                    |               |
 | `Jan 2021`   |                           |                    |               |
 |     12-13    |Android basics with Kotlin |        30+         |     EricG     |
-|     19       |   Using Git & Githun      |        15+         |     EricG     |     
+|     19       |   Using Git & Github      |        15+         |     EricG     |     
