Added pending activities and list items

--- a/2020-2021-sem1.md
+++ b/2020-2021-sem1.md
@@ -1,13 +1,28 @@
-### Events are held twice per week (on `Tuesday` and `Wednesday`).
+#### Events are held twice per week (on `Tuesday` and `Wednesday`).
 
 |     Date     |     Concepts covered      |    Attendees       |     Lead      |
 |     ---      |           ---             |       ---          |     ---       |
 |              |                           |                    |               |
 |  `Dec 2020`  |                           |                    |               |
-|    08-09     |IDE and Git installation   |       35+          |  Paul & EricG |
-|                                                                               |
+|    08-09     |    Tools installation     |       35+          |  Paul & EricG |
+|              | :small_orange_diamond: Android studio         | |              |
+|              | :small_orange_diamond: IntelliJ               | |              |
+|              | :small_orange_diamond: Git                    | |              |
+|              |                           |                    |               |
 |    15-16     | Intro to Android Studio   |       30+          |  Paul & EricG |
 |              |                           |                    |               |
 | `Jan 2021`   |                           |                    |               |
 |     12-13    |Android basics with Kotlin |        30+         |     EricG     |
-|     19       |   Using Git & Github      |        15+         |     EricG     |     
+|     19       |   Using Git & Github      |        15+         |     EricG     |  
+
+#### Pending
+
+- [ ] Solution to design challenge (issued on jan 19th) 
+- [ ] Permissions
+- [ ] Dialogs
+
+#### Semester1 Performace report
+
+--- will be out soon ---
+
+
