Added Feb 1st session

--- a/2020-2021-sem1.md
+++ b/2020-2021-sem1.md
@@ -13,7 +13,10 @@
 |              |                           |                    |               |
 | `Jan 2021`   |                           |                    |               |
 |     12-13    |Android basics with Kotlin |        30+         |     EricG     |
-|     19       |   Using Git & Github      |        15+         |     EricG     |  
+|     19       |   Using Git & Github      |        15+         |     EricG     |
+|              |                           |                    |               |
+| `Feb 2021`   |                           |                    |               |
+|     03       |Worked on weelky challenge |        10+         |     EricG     |
 
 #### Pending
 
@@ -24,5 +27,3 @@
 #### Semester1 Performace report
 
 --- will be out soon ---
-
-
