--- a/2020-2021-sem1.md
+++ b/2020-2021-sem1.md
@@ -10,19 +10,22 @@
 |              | :small_orange_diamond: Git                    | |              |
 |              |                           |                    |               |
 |    15-16     | Intro to Android Studio   |       30+          |  Paul & EricG |
-|              |                           |                    |               |
-| `Jan 2021`   |                           |                    |               |
-|     12-13    |Android basics with Kotlin |        30+         |     EricG     |
-|     19       |   Using Git & Github      |        15+         |     EricG     |
-|              |                           |                    |               |
-| `Feb 2021`   |                           |                    |               |
-|     03       |Worked on weelky challenge |        10+         |     EricG     |
+|              |                           |                    |  @Ericgacoki  |
+| `Jan 2021`   |                           |                    | |
+|    12-13     |Android basics with Kotlin |        30+         | |
+|     19       |   Using Git & Github      |        15+         | |
+|              |                           |                    | |
+| `Feb 2021`   |                           |                    | |
+|     03       |Worked on weelky challenge |        10+         | |
+|    10-11     |  Finished up the solution |       < 15         | |
 
 #### Pending
 
-- [ ] Solution to design challenge (issued on jan 19th) 
 - [ ] Permissions
 - [ ] Dialogs
+- [ ] Intro to JetPack :rocket:
+
+- [ ] Performance form (ready after the last session)
 
 #### Semester1 Performace report
 
