--- a/2020-2021-sem1.md
+++ b/2020-2021-sem1.md
@@ -4,20 +4,20 @@
 |     ---      |           ---             |       ---          |     ---       |
 |              |                           |                    |               |
 |  `Dec 2020`  |                           |                    |               |
-|    08-09     |  **Tools installation**   |       35+          |  Paul & EricG |
+|    08-09     |  **Tools installation**   |       35+          |  Paul & Eric  |
 |              | :small_orange_diamond: Android studio         | |              |
 |              | :small_orange_diamond: IntelliJ               | |              |
 |              | :small_orange_diamond: Git                    | |              |
 |              |                           |                    |               |
-|    15-16     | Intro to Android Studio   |       30+          |  Paul & EricG |
-|              |                           |                    |  @Ericgacoki  |
+|    15-16     | Intro to Android Studio   |       30+          |  Paul & Eric  |
+|              |                           |                    |  Eric |
 | `Jan 2021`   |                           |                    | |
 |    12-13     |Android basics with Kotlin |        30+         | |
 |     19       |   Using Git & Github      |        15+         | |
 |              |                           |                    | |
 | `Feb 2021`   |                           |                    | |
 |     03       |Worked on weelky challenge |        10+         | |
-|    10-11     |  Finished up the solution |       < 15         | |
+|    10-11     |  Finished up the solution |       online       | |
 
 #### Pending
 
