--- a/2020-2021-sem1.md
+++ b/2020-2021-sem1.md
@@ -18,6 +18,8 @@
 | `Feb 2021`   |                           |                    | |
 |     03       |Worked on weelky challenge |        10+         | |
 |    10-11     |  Finished up the solution |       online       | |
+|              |                           |                    | |
+|      12      |         HackNight         |          28        | |
 
 #### Pending
 
