--- a/2020-2021-sem1.md
+++ b/2020-2021-sem1.md
@@ -20,6 +20,7 @@
 |    10-11     |  Finished up the solution |       online       | |
 |              |                           |                    | |
 |      12      |         HackNight         |          28        | |
+|    16-17     |   VCS - Git & Github      |          15        | |
 
 #### Pending
 
