--- a/2020-2021-sem1.md
+++ b/2020-2021-sem1.md
@@ -21,6 +21,12 @@
 |              |                           |                    | |
 |      12      |         HackNight         |          28        | |
 |    16-17     |   VCS - Git & Github      |          15        | |
+|              | :small_orange_diamond: Creating acc            | |              |
+|              | :small_orange_diamond: Basics                  | |              |
+|              | :small_orange_diamond: Fork                    | |              |
+|              | :small_orange_diamond: clone        | |              |
+|              | :small_orange_diamond: --               | |              |
+|              | :small_orange_diamond: --                    | |              |
 
 #### Pending
 
