updated Git & Github session

--- a/2020-2021-sem1.md
+++ b/2020-2021-sem1.md
@@ -22,11 +22,14 @@
 |      12      |         HackNight         |          28        | |
 |    16-17     |   VCS - Git & Github      |          15        | |
 |              | :small_orange_diamond: Creating acc            | |              |
-|              | :small_orange_diamond: Basics                  | |              |
+|              | :small_orange_diamond: Basics(repos)           | |              |
+|              | :small_orange_diamond: Commit, Push            | |              |
+|              | :small_orange_diamond: Clone                   | |              |
 |              | :small_orange_diamond: Fork                    | |              |
-|              | :small_orange_diamond: clone        | |              |
-|              | :small_orange_diamond: --               | |              |
-|              | :small_orange_diamond: --                    | |              |
+|              | :small_orange_diamond: Issue                   | |              |
+|              | :small_orange_diamond: Pull request            | |              |
+|              | :small_orange_diamond: Git + Android Studio    | |              |
+|              | :small_orange_diamond: Revert                  | |              |
 
 #### Pending
 
