Hid pending topics and updated leads column
There's a change of learning strategies underway.

--- a/2020-2021-sem1.md
+++ b/2020-2021-sem1.md
@@ -3,14 +3,14 @@
 |     Date     |     Concepts covered      |    Attendees       |     Lead      |
 |     ---      |           ---             |       ---          |     ---       |
 |              |                           |                    |               |
-|  `Dec 2020`  |                           |                    |               |
-|    08-09     |  **Tools installation**   |       35+          |  Paul & Eric  |
-|              | :small_orange_diamond: Android studio         | |              |
-|              | :small_orange_diamond: IntelliJ               | |              |
-|              | :small_orange_diamond: Git                    | |              |
-|              |                           |                    |               |
-|    15-16     | Intro to Android Studio   |       30+          |  Paul & Eric  |
-|              |                           |                    |  Eric |
+|  `Dec 2020`  |                           |                    | `Paul & Eric` |
+|    08-09     |  **Tools installation**   |       35+          | |
+|              | :small_orange_diamond: Android studio          | |             |
+|              | :small_orange_diamond: IntelliJ                | |             |
+|              | :small_orange_diamond: Git                     | |             |
+|              |                           |                    | |
+|    15-16     | Intro to Android Studio   |       30+          | |
+|              |                           |                    | |
 | `Jan 2021`   |                           |                    | |
 |    12-13     |Android basics with Kotlin |        30+         | |
 |     19       |   Using Git & Github      |        15+         | |
@@ -20,7 +20,7 @@
 |    10-11     |  Finished up the solution |       online       | |
 |              |                           |                    | |
 |      12      |         HackNight         |          28        | |
-|    16-17     |   VCS - Git & Github      |          15        | |
+|    16-17     |  VCS - Git & Github(redo) |          15        | |
 |              | :small_orange_diamond: Creating acc            | |              |
 |              | :small_orange_diamond: Basics(repos)           | |              |
 |              | :small_orange_diamond: Commit, Push            | |              |
@@ -32,11 +32,12 @@
 |              | :small_orange_diamond: Revert                  | |              |
 
 #### Pending
-
+Hidden💔
+<!--
 - [ ] Permissions
 - [ ] Dialogs
 - [ ] Intro to JetPack :rocket:
-
+-->
 - [ ] Performance form (ready after the last session)
 
 #### Semester1 Performace report
