--- a/2020-2021-sem1.md
+++ b/2020-2021-sem1.md
@@ -5,34 +5,43 @@
 |              |                           |                    |               |
 |  `Dec 2020`  |                           |                    | `Paul & Eric` |
 |    08-09     |  **Tools installation**   |       35+          | |
-|              | :small_orange_diamond: Android studio          | |             |
-|              | :small_orange_diamond: IntelliJ                | |             |
-|              | :small_orange_diamond: Git                     | |             |
+|              | 🔸 Android studio         |                    | |
+|              | 🔸IntelliJ                |                    | |
+|              | 🔸 Git                    |                    | |
 |              |                           |                    | |
 |    15-16     | Intro to Android Studio   |       30+          | |
+|              | 🔸 Created 1st Android project                 | |             |
 |              |                           |                    | |
 | `Jan 2021`   |                           |                    | |
 |    12-13     |Android basics with Kotlin |        30+         | |
+|              | 🔸 Android Views          |                    | |
+|              | 🔸 Constraint Layout      |                    | |
+|              | 🔸 Why Kotlin?            |                    | |
 |     19       |   Using Git & Github      |        15+         | |
+|              | 🔸 What's and Why's       |                    | |
 |              |                           |                    | |
 | `Feb 2021`   |                           |                    | |
-|     03       |Worked on weelky challenge |        10+         | |
+|     03       |**Worked on weelky challenge**|        10+      | |
+|              | Involved;                 |                    | |
+|              | 🔸 ImageView,Buttons,Drawables,Styles          | |             |
+|              | 🔸 DataBinding(one way),Intents                | |             |
+|              | 🔸                        |                    | |
 |    10-11     |  Finished up the solution |       online       | |
 |              |                           |                    | |
 |      12      |         HackNight         |          28        | |
 |    16-17     |  VCS - Git & Github(redo) |          15        | |
-|              | :small_orange_diamond: Creating acc            | |              |
-|              | :small_orange_diamond: Basics(repos)           | |              |
-|              | :small_orange_diamond: Commit, Push            | |              |
-|              | :small_orange_diamond: Clone                   | |              |
-|              | :small_orange_diamond: Fork                    | |              |
-|              | :small_orange_diamond: Issue                   | |              |
-|              | :small_orange_diamond: Pull request            | |              |
-|              | :small_orange_diamond: Git + Android Studio    | |              |
-|              | :small_orange_diamond: Revert                  | |              |
+|              | 🔸 Creating acc            |                   | |
+|              | 🔸 Basics(repos)           |                   | |
+|              | 🔸 Commit, Push            |                   | |
+|              | 🔸 Clone                   |                   | |
+|              | 🔸 Fork                    |                   | |
+|              | 🔸 Issue                   |                   | |
+|              | 🔸 Pull request            |                   | |
+|              | 🔸 Git + Android Studio    |                   | |
+|              | 🔸 Revert                  |                   | |
 
 #### Pending
-Hidden💔
+Hidden 💔
 <!--
 - [ ] Permissions
 - [ ] Dialogs
