Edited table title

--- a/2020-2021-sem1.md
+++ b/2020-2021-sem1.md
@@ -1,4 +1,4 @@
-#### Events are held twice per week (on `Tuesday` and `Wednesday`).
+#### The table below summarizes all Android sessions held in the 1st semester of the 2020/2021 accademic year. Events are usually held twice per week (on `Tuesday` and `Wednesday`).
 
 |     Date     |     Concepts covered      |    Attendees       |     Lead      |
 |     ---      |           ---             |       ---          |     ---       |
@@ -39,6 +39,9 @@
 |              | 🔸 Pull request            |                   | |
 |              | 🔸 Git + Android Studio    |                   | |
 |              | 🔸 Revert                  |                   | |
+
+
+### still on draft...
 
 #### Pending
 Hidden 💔
